# hypertag

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  builtins.py  html.py  hypertag  setup.cfg  tox.ini
.github/: FUNDING.yml
assets/css/: style.scss
core/: AST.py  DOM.py  README_draft.md  _builtins.py  _html.py  ast.py  content.py  dom.py  errors.py  grammar.py  registry.py  run_html.py  runtime.py  structs.py  tag.py
django/: filters.py
docs/: CNAME  index.md  pypi.md  style.scss
docs/assets/: style.scss
docs/assets/css/: style.scss
src/hypertag/: .gitignore  __init__.py
src/hypertag/core/: ast.py  dom.py  errors.py  grammar.py  run_html.py  runtime.py  structs.py  tag.py  xml_chars.py
src/hypertag/django/: backend.py  filters.py
src/hypertag/nifty/: parsing.py  util.py
src/hypertag/std/: __init__.py  builtins.py  html.py  registry.py
src/hypertag/tests/: sample1.py  sample2.hy  sample3.hy  sample4.hy
src/hypertag/tests/package1/: sample3.hy
std/: builtins.py  html.py  registry.py
test/: sample2.hy  sample_usage.html  sample_usage.py  sandbox.py  tests.py
tests/: sample_usage.html  sandbox.py  sandbox_py2.py  test.py  test_main.py
