[metadata]
name = hypertag-lang
version = 1.1.4
author = Marcin Wojnarski
author_email = hypertag@paperity.org
description = Modern language for markup generation with Python-like concise syntax, custom tags & Django integration. HTML templates reinvented.
long_description = file: docs/pypi.md
long_description_content_type = text/markdown
url = http://hypertag.io/
project_urls =
    Source = https://github.com/mwojnars/hypertag
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = markup, language, html, html5, css, templates, templating, tags, jinja2, mako, django, DOM

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
setup_requires =
    wheel
install_requires =
    parsimonious==0.8.1
    six>=1.12.0

[options.packages.find]
where = src
